--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "news-hub-react",
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://akshay2002singh.github.io/News_Hub_React",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
